# STM32F405_CanBootloader

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  STM32F405RGTX_FLASH.ld  STM32F405RGTX_RAM.ld  STM32F405RGTX_RAM_AT_FLASH.ld  STM32_CanBootloader.ioc  build.sh  clean.sh  configure_bootloader.py  jlink_stm32f4x.cfg  jlink_stm32f4x_ocd11.cfg  prog-btl.sh  readme.md
Core/Inc/: bootloader.h  crc.h  main.h  sha1.h  stm32f4xx_it.h
Core/Src/: bootloader.c  can.c  crc.c  gpio.c  main.c  sha1.c  stm32f4xx_it.c
Core/Startup/: startup_stm32f405rgtx.s
LoaderUtil/: main.py
LoaderUtil/libs/CAN/: __init__.py  channel.py  message.py
LoaderUtil/libs/CAN/CHAI/: __init__.py  chai.py  channel.py  defines.py  exceptions.py  utils.py
LoaderUtil/libs/CRC/: crc.py
utils/: abtci.py  bootlaoder_util.py  btl_config.py  btl_loader.py  can.py  cpu_widget_2.ui  crc.py  elf.py  main_window.ui  ui_cpu_widget_2.py  ui_main_window.py
